--- a/src/localization/ru.json
+++ b/src/localization/ru.json
@@ -12,7 +12,7 @@
   "general.tech": "Стэк технологий",
 
   "about.h2": "ОБО МНЕ",
-  "about.h1": "Специализированный Frontend-разработчик из Москвы",
+  "about.h1": "Frontend-разработчик из Москвы",
   "about.p": "Как младший frontend разработчик, я обладаю впечатляющим арсеналом навыков в HTML, CSS, JavaScript и React. Я преуспеваю в разработке и поддержке адаптивных веб-сайтов, которые обеспечивают удобство работы с пользователем. Я имею обширный опыт в создании динамичных, привлекательных интерфейсов посредством написания чистого и оптимизированного кода и использования передовых инструментов и методов разработки. Я командный игрок, и хорош в сотрудничестве с разными командами для создания выдающихся веб-приложений",
 
   "projects.h2": "ПОРТФОЛИО",
