--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -12,7 +12,7 @@
   "general.tech": "Tech Stack",
 
   "about.h2": "ABOUT ME",
-  "about.h1": "A dedicated Front-end Developer based in Moscow",
+  "about.h1": "Front-end Developer based in Moscow",
   "about.p": "As a Junior Front-End Developer, I possess an impressive arsenal of skills in HTML, CSS, JavaScript and React. I excel in designing and maintaining responsive websites that offer a smooth user experience. My expertise lies in crafting dynamic, engaging interfaces through writing clean and optimized code and utilizing cutting-edge development tools and techniques. I am also a team player who thrives in collaborating with cross-functional teams to produce outstanding web applications",
 
   "projects.h2": "PORTFOLIO",
