--- a/src/localization/ru.json
+++ b/src/localization/ru.json
@@ -17,6 +17,8 @@
 
   "projects.h2": "ПОРТФОЛИО",
   "projects.h1": "Каждый проект – это искусство",
+  "projects.gen2.header": "Новое поколение",
+  "projects.gen2.nothing": "Скоро...",
 
   "card.code": "Код",
   "card.live": "Попробовать ",
